public interface TaskObserver {
    void update(Task task);
}
