import java.util.List;

public interface TaskViewInterface {
    void displayTasks(List<Task> tasks);

    void displayMessage(String message);

}
